--- a/index.html
+++ b/index.html
@@ -14,19 +14,35 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="component-container">
+      <div class="column-left">
+        <h1>Get insights that help your business grow.</h1>
 
-  Get insights that help your business grow.
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.</p>
+        <div class="stats-columns">
+          <h2>10k+</h2>
+          <p>templates</p>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
+          <h2>314</h2>
+          <p>companies</p>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+          <h2>12M+</h2>
+          <p>queries</p>
+        </div>
+      </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="column-right">
+        <img src="/images/image-header-desktop.jpg" alt="">
+      </div>
+    </div>
+    <!--Component Container Ends Here--->
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
 </body>
 
