05-10-12:42--everything looks good, except the filter for the image, responsiveness is missing

--- a/index.html
+++ b/index.html
@@ -17,31 +17,38 @@
   <div class="container">
     <div class="component-container">
       <div class="column-left">
-        <h1>Get insights that help your business grow.</h1>
+        <h1>Get <strong>insights</strong> that help your business grow.</h1>
 
-        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        <p id="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue, customer
           experience, and overall efficiency.</p>
         <div class="stats-columns">
-          <h2>10k+</h2>
-          <p>templates</p>
+          <div class="stats-element">
+            <h2>10k+</h2>
+            <p>COMPANIES</p>
+          </div>
 
-          <h2>314</h2>
-          <p>companies</p>
+          <div class="stats-element">
+            <h2>314</h2>
+            <p>TEMPLATES</p>
+          </div>
 
-          <h2>12M+</h2>
-          <p>queries</p>
+          <div class="stats-element">
+            <h2>12M+</h2>
+            <p>QUERIES</p>
+          </div>
+
         </div>
       </div>
 
       <div class="column-right">
-        <img src="/images/image-header-desktop.jpg" alt="">
+        <img class="main-image" src="/images/image-header-desktop.jpg" alt="">
       </div>
     </div>
     <!--Component Container Ends Here--->
 
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a target="_blank" href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
+      Coded by <a target="_blank" href="https://github.com/nmelgar">nmelgar</a>.
     </div>
   </div>
 </body>
