05-10-19:46--responsivess completed, its not very flexible, but adapts for big and small screens

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <body>
   <div class="container">
     <div class="component-container">
+      <!--This will show only in small screen, will become the top part image-->
+      <div class="column-right-mobile">
+        <img class="main-image-mobile" src="/images/image-header-mobile.jpg" alt="">
+      </div>
+
       <div class="column-left">
         <h1>Get <strong>insights</strong> that help your business grow.</h1>
 
@@ -41,7 +46,7 @@
       </div>
 
       <div class="column-right">
-        <img class="main-image" src="/images/image-header-desktop.jpg" alt="">
+        <img class="main-image-large" src="/images/image-header-desktop.jpg" alt="">
       </div>
     </div>
     <!--Component Container Ends Here--->
